fix: internationalization, dark mode, default search, debounce

--- a/packages/view/src/pages/SearchPage/components/search/DragAndDrop.scss
+++ b/packages/view/src/pages/SearchPage/components/search/DragAndDrop.scss
@@ -81,6 +81,7 @@
       /* stylelint-enable */
 
       .text {
+        color: var(--color-text);
         text-align: center;
       }
 
